<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnToActivityB"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="@drawable/my_button"
        android:text="@string/about"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnToActivityC"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnToActivityB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/my_button"
        android:text="@string/my_profile"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

</RelativeLayout>